# gen_ai_project_chatbot

./: .env.example  .gitignore  README.md  chainlit.md  chainlit.yaml  pyproject.toml  requirements.txt
.chainlit/: chainlit.md  config.toml
evaluation_results/: detailed_results_20250515_151731.csv  scores_20250515_151731.json  summary_20250515_151731.txt
evaluation_results1/: evaluation_results_20250515_151948.txt
public/: stylesheet.css
src/: __init__.py  agent.py  app.py  data_loader.py  evaluate.py  evaluate_ragas.py  initialize.py  rag.py  test_rag.py
