[tool.poetry]
name = "aivancity-rag-agent"
version = "0.1.0"
description = "RAG-based conversational agent for Aivancity School"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "3.12.9"
langchain = "^0.1.0"
langchain-community = "^0.0.38"
langchain-core = "^0.1.27"
langchain-openai = "^0.0.5"
langgraph = "^0.0.26"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.5.1"
chainlit = "^1.0.0"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
pymupdf = "^1.23.26"
tavily-python = "^0.7.2"
ragas = "0.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 